Update package.json and README files to reflect new author information, repository links, and enhanced keywords. Changed description to emphasize virtual scrolling. Updated peer dependencies to support Angular 19 and improved build scripts for production. Added author section in README for better visibility.

--- a/package.json
+++ b/package.json
@@ -1,32 +1,48 @@
 {
   "name": "ngxsmk-datatable",
   "version": "1.0.0",
-  "description": "A powerful, feature-rich Angular datatable component with virtual DOM support, built for Angular 17+",
+  "description": "A powerful, feature-rich Angular datatable component with virtual scrolling, built for Angular 17+",
   "keywords": [
     "angular",
     "datatable",
     "table",
-    "virtual-dom",
+    "virtual-scrolling",
     "pagination",
     "sorting",
+    "selection",
+    "row-details",
     "material",
-    "typescript"
+    "typescript",
+    "standalone",
+    "angular17",
+    "angular18",
+    "angular19",
+    "ngxsmk",
+    "grid",
+    "data-grid",
+    "filtering",
+    "export",
+    "customizable"
   ],
-  "author": "Your Name <your.email@example.com>",
+  "author": "Sachin Dilshan <sachindilshan040@gmail.com>",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/yourusername/ngxsmk-datatable.git"
+    "url": "https://github.com/toozuuu/ngxsmk-datatable.git"
   },
   "bugs": {
-    "url": "https://github.com/yourusername/ngxsmk-datatable/issues"
+    "url": "https://github.com/toozuuu/ngxsmk-datatable/issues"
   },
-  "homepage": "https://github.com/yourusername/ngxsmk-datatable#readme",
+  "homepage": "https://github.com/toozuuu/ngxsmk-datatable#readme",
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
+  },
   "peerDependencies": {
-    "@angular/common": "^17.0.0 || ^18.0.0",
-    "@angular/core": "^17.0.0 || ^18.0.0",
-    "@angular/forms": "^17.0.0 || ^18.0.0",
-    "@angular/platform-browser": "^17.0.0 || ^18.0.0",
+    "@angular/common": "^17.0.0 || ^18.0.0 || ^19.0.0",
+    "@angular/core": "^17.0.0 || ^18.0.0 || ^19.0.0",
+    "@angular/forms": "^17.0.0 || ^18.0.0 || ^19.0.0",
+    "@angular/platform-browser": "^17.0.0 || ^18.0.0 || ^19.0.0",
     "rxjs": "^7.0.0"
   },
   "dependencies": {},
@@ -64,15 +80,17 @@
     "build": "ng build ngxsmk-datatable",
     "build:lib": "ng build ngxsmk-datatable",
     "build:lib:watch": "ng build ngxsmk-datatable --watch",
+    "build:lib:prod": "ng build ngxsmk-datatable --configuration production",
     "build:demo": "ng build demo-app",
+    "build:demo:prod": "ng build demo-app --configuration production",
     "build:all": "npm run build:lib && npm run build:demo",
     "test": "ng test",
     "test:lib": "ng test ngxsmk-datatable",
     "test:demo": "ng test demo-app",
     "lint": "ng lint",
     "pack": "npm run build:lib && cd dist/ngxsmk-datatable && npm pack",
-    "publish:lib": "npm run build:lib && cd dist/ngxsmk-datatable && npm publish",
-    "clean": "rimraf dist out-tsc",
+    "publish:lib": "npm run build:lib:prod && cd dist/ngxsmk-datatable && npm publish",
+    "clean": "rimraf dist out-tsc node_modules/.cache",
     "dev": "npm run build:lib:watch",
     "demo": "npm start"
   }
