Update CODE_OF_CONDUCT with contact email, enhance README with StackBlitz links, and adjust package.json for StackBlitz integration. Modify tsconfig paths for better module resolution and improve demo app styling for secondary buttons.

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "url": "https://github.com/toozuuu/ngxsmk-datatable/issues"
   },
   "homepage": "https://github.com/toozuuu/ngxsmk-datatable#readme",
+  "stackblitz": "https://stackblitz.com/~/github.com/toozuuu/ngxsmk-datatable",
   "engines": {
     "node": ">=18.0.0",
     "npm": ">=9.0.0"
