--- a/projects/ngxsmk-datatable/package.json
+++ b/projects/ngxsmk-datatable/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngxsmk-datatable",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "A powerful, feature-rich Angular datatable component with virtual scrolling, built for Angular 17+",
   "keywords": [
     "angular",
@@ -13,6 +13,8 @@
     "row-details",
     "material",
     "typescript",
+    "typed-rows",
+    "type-safe",
     "standalone",
     "angular17",
     "angular18",
